--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Zitong Lu (路子童)"
+  name             : "Zitong Lu"
   avatar           : "profile.png"
   bio              : "To be a cognitive computational neuroscientist."
   location         : "Columbus, OH, USA"
